2017-10-17 Gregory L. Lee <lee218@llnl.gov>
	* * : pass PYTHONPATH and STAT_GDB to BE as args

2017-10-16 Gregory L. Lee <lee218@llnl.gov>
	* doc/src/* : documentation updates for GDB and CUDA debugging

2017-10-03 Gregory L. Lee <lee218@llnl.gov>
	* : allow use of vanilla gdb in addition to cuda-gdb
	* : better error checking of gdb module functions
	* : enable retry for cuda traces when not in cuda kernel
	* STAT_BackEnd.C : don't clear nodIdToAttrs_ in clear2dNodes and Edges (broke 3D traces)
	* : enable quick cuda traces (from "info cuda threads")

2017-09-19 Gregory L. Lee <lee218@llnl.gov>
	* STAT_BackEnd.C : improved python function arg creation

2017-09-15 Gregory L. Lee <lee218@llnl.gov>
	* : added cuda-gdb backend implementation

2017-08-15 Gregory L. Lee <lee218@llnl.gov>
	* : added callpath wrapper
	* : dysect dump lightweight core via callpath

2017-06-30 Gregory L. Lee <lee218@llnl.gov>
	* core_file_merger.py : CUDA core file merging added

2017-06-20 Gregory L. Lee <lee218@llnl.gov>
	* : Core file merger updated to use graphlib 3.0 interface
	* : Core file merger add thread count

2017-06-16 Gregory L. Lee <lee218@llnl.gov>
	* : Updated documentation
	* : Fixes to core file merger

2017-06-15 Gregory L. Lee <lee218@llnl.gov>
	* : Major travis build fixes

2017-06-07 Gregory L. Lee <lee218@llnl.gov>
	* STATview.py, STATmain.py : main launcher should allow cl to be run when import of STATview or STATGUI fails

2017-06-05 Gregory L. Lee <lee218@llnl.gov>
	* x_ac_debuglibs.m4 : do not explicitly link in libelf, libdwarf, libiberty

2017-06-01 Gregory L. Lee <lee218@llnl.gov>
	* STATGUI.py : imporoved process listing and filtering

2017-05-18 Gregory L. Lee <lee218@llnl.gov>
	* STATview.py : GUI option to cache app source files

2017-05-17 Gregory L. Lee <lee218@llnl.gov>
	* : Added arg parsing to GUI
	* : Run through STATmain.py with subcommands

2017-05-11 Gregory L. Lee <lee218@llnl.gov>
	* : Enable Python-script-level debugging by default
