@@ -18,6 +18,7 @@ autom4te.cache
 *.ptab
 *.top
 *core*
+hostnamefn.*
 Makefile
 Makefile.in
 config.h
@@ -29,6 +30,14 @@ config/ltmain.sh
 config/ltoptions.m4
 config/ltversion.m4
 config/lt~obsolete.m4
+config/config.guess
+config/config.sub
+config/depcomp
+config/install-sh
+config/ltsugar.m4
+config/missing
+config/py-compile
+config/ylwrap
 configure
 doc/refman/
 doc/src/INSTALL
@@ -83,14 +92,17 @@ src/dysect/libDysectAPI/src/.deps/
 src/dysect/libDysectAPI/src/.libs/
 src/dysect/libDysectAPI/src/expr-parser.cc
 src/dysect/libDysectAPI/src/expr-parser.h
+src/dysect/libDysectAPI/src/expr-parser.hh
 src/dysect/libDysectAPI/src/expr-scanner.cc
 src/dysect/libDysectAPI/src/expr-scanner.h
+src/analyticslib/.deps/
+src/analyticslib/.libs/
 stamp-h1
 stat_results
 TODO
 extra_stuff
 slurm-*.out
-r00*
+r0*
 mpi_ringtopo*
 out*.txt
 tags
